Initial styling and fonts

--- a/index.html
+++ b/index.html
@@ -1,22 +1,41 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Gustoso -  Pastry with Love</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="assets/styles/normalize.css" />
-    <link rel="stylesheet" type="text/css" media="screen" href="assets/styles/main.css" />
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Gustoso -  Pastry with Love</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" type="text/css" media="screen" href="assets/styles/normalize.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="assets/styles/main.css" />
+  <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/brands.js" integrity="sha384-sCI3dTBIJuqT6AwL++zH7qL8ZdKaHpxU43dDt9SyOzimtQ9eyRhkG3B7KMl6AO19" crossorigin="anonymous"></script>
+  <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
+</head>
 <body>
+  <section class="hero">
     <nav>
-        <h3>Gustoso</h3>
-        <ul>
-            <li class="nav-link"><a href="#">Welcome</a></li>
-            <li class="nav-link"><a href="#">Menu</a></li>
-            <li class="nav-link"><a href="#">Reservations</a></li>
-            <li class="nav-link"><a href="#">News</a></li>
-            <li class="nav-link"><a href="#">Contact</a></li>
-        </ul>
+      <h3 class="logo">Gustoso</h3>
+      <ul class="nav-list">
+        <li class="nav-link"><a href="#">Welcome</a></li>
+        <li class="nav-link">~</li>
+        <li class="nav-link"><a href="#">Menu</a></li>
+        <li class="nav-link">~</li>
+        <li class="nav-link"><a href="#">Reservations</a></li>
+        <li class="nav-link">~</li>
+        <li class="nav-link"><a href="#">News</a></li>
+        <li class="nav-link">~</li>
+        <li class="nav-link"><a href="#">Contact</a></li>
+      </ul>
+      <ul class="nav-list">
+        <li class="social-btn"><a href=""><i class="fab fa-twitter"></i></a></li>
+        <li class="social-btn"><a href=""><i class="fab fa-facebook-f"></i></a></li>
+        <li class="social-btn"><a href=""><i class="fab fa-instagram"></i></a></li>
+      </ul>      
     </nav>
+    
+    <h1 class="tagline">Pastry with love</h1>
+    <span class="divider">- - - - - - - - .</span>
+    <p class="blurb">We're bringing you the fresh ingredients every day in ways you can't resist.</p>
+    <button class="btn hero-btn">Our Menu</button>
+  </section>
 </body>
 </html>
