--- a/index.html
+++ b/index.html
@@ -13,29 +13,41 @@
 <body>
   <section class="hero">
     <nav>
-      <h3 class="logo">Gustoso</h3>
-      <ul class="nav-list">
-        <li class="nav-link"><a href="#">Welcome</a></li>
-        <li class="nav-link">~</li>
-        <li class="nav-link"><a href="#">Menu</a></li>
-        <li class="nav-link">~</li>
-        <li class="nav-link"><a href="#">Reservations</a></li>
-        <li class="nav-link">~</li>
-        <li class="nav-link"><a href="#">News</a></li>
-        <li class="nav-link">~</li>
-        <li class="nav-link"><a href="#">Contact</a></li>
-      </ul>
-      <ul class="nav-list">
-        <li class="social-btn"><a href=""><i class="fab fa-twitter"></i></a></li>
-        <li class="social-btn"><a href=""><i class="fab fa-facebook-f"></i></a></li>
-        <li class="social-btn"><a href=""><i class="fab fa-instagram"></i></a></li>
-      </ul>      
+      <div class="nav-bar">
+        <h3 class="logo">Gustoso</h3>
+        <ul class="nav-list">
+          <li class="nav-link"><a href="#">Welcome</a></li>
+          <li>~</li>
+          <li class="nav-link"><a href="#">Menu</a></li>
+          <li>~</li>
+          <li class="nav-link"><a href="#">Reservations</a></li>
+          <li>~</li>
+          <li class="nav-link"><a href="#">News</a></li>
+          <li>~</li>
+          <li class="nav-link"><a href="#">Contact</a></li>
+        </ul>
+        <ul class="social-list">
+          <li class="social-btn"><a href=""><i class="fab fa-twitter"></i></a></li>
+          <li class="social-btn"><a href=""><i class="fab fa-facebook-f"></i></a></li>
+          <li class="social-btn"><a href=""><i class="fab fa-instagram"></i></a></li>
+        </ul>
+      </div>
     </nav>
     
     <h1 class="tagline">Pastry with love</h1>
-    <span class="divider">- - - - - - - - .</span>
-    <p class="blurb">We're bringing you the fresh ingredients every day in ways you can't resist.</p>
-    <button class="btn hero-btn">Our Menu</button>
+    <p class="divider">
+      <span id="divider1">-</span>
+      <span id="divider2">-</span>
+      <span id="divider3">-</span>
+      <span id="divider4">-</span>
+      <span id="divider5">-</span>
+      <span id="divider6">-</span>
+      <span id="divider7">-</span>
+      <span id="divider8">-</span>
+      <span id="divider9">-</span>
+    </p>
+    <p class="blurb">We're bringing you the fresh ingredients every <br> day in ways you can't resist.</p>
+    <button class="btn hero-btn"><a>Our Menu</a></button>
   </section>
 </body>
 </html>
