--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <span id="divider6">-</span>
       <span id="divider7">-</span>
       <span id="divider8">-</span>
-      <span id="divider9">-</span>
+      <span id="divider9">.</span>
     </p>
     <p class="blurb">We're bringing you the fresh ingredients every <br> day in ways you can't resist.</p>
     <button class="btn hero-btn"><a>Our Menu</a></button>
