Added section divider and started on second section

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav>
       <div class="nav-bar">
         <h3 class="logo">Gustoso</h3>
-        <ul class="nav-list">
+        <ul class="nav-list is-caps">
           <li class="nav-link"><a href="#">Welcome</a></li>
           <li>~</li>
           <li class="nav-link"><a href="#">Menu</a></li>
@@ -48,6 +48,30 @@
     </p>
     <p class="blurb">We're bringing you the fresh ingredients every <br> day in ways you can't resist.</p>
     <button class="btn hero-btn"><a>Our Menu</a></button>
+    <div class="section-divider"></div>
+  </section>
+
+  <br>
+  
+  <section class="about">
+    <div class="about-container">
+      <div class="cake-blurb">
+        <h3>Art of cakes</h3>
+        <h5 class="is-caps">We create delicious memories</h5>
+        <p>
+          Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui.
+          Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum.
+        </p>
+        <h4>Chef Cook</h4>
+        <div class="chef-img"><h4>Benito <img src="" alt=""> Gaspare</h4></div>
+        <div class="quote">
+          &ldquo;<br>
+          Unique creations for unique occasions.
+          <br>&rdquo;
+        </div>
+      </div>
+      <div class="cake-grid"></div>
+    </div>
   </section>
 </body>
 </html>
