Finished second section

--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
       <div class="nav-bar">
         <h3 class="logo">Gustoso</h3>
         <ul class="nav-list is-caps">
-          <li class="nav-link"><a href="#">Welcome</a></li>
+          <li class="nav-link"><a href="#">welcome</a></li>
           <li>~</li>
-          <li class="nav-link"><a href="#">Menu</a></li>
+          <li class="nav-link"><a href="#">menu</a></li>
           <li>~</li>
-          <li class="nav-link"><a href="#">Reservations</a></li>
+          <li class="nav-link"><a href="#">reservations</a></li>
           <li>~</li>
-          <li class="nav-link"><a href="#">News</a></li>
+          <li class="nav-link"><a href="#">news</a></li>
           <li>~</li>
-          <li class="nav-link"><a href="#">Contact</a></li>
+          <li class="nav-link"><a href="#">contact</a></li>
         </ul>
         <ul class="social-list">
           <li class="social-btn"><a href=""><i class="fab fa-twitter"></i></a></li>
@@ -46,8 +46,8 @@
       <span id="divider8">-</span>
       <span id="divider9">.</span>
     </p>
-    <p class="blurb">We're bringing you the fresh ingredients every <br> day in ways you can't resist.</p>
-    <button class="btn hero-btn"><a>Our Menu</a></button>
+    <p class="blurb">We're bringing you the fresh ingredients every<br>day in ways you can't resist.</p>
+    <button class="btn hero-btn is-caps"><a>Our Menu</a></button>
     <div class="section-divider"></div>
   </section>
 
@@ -55,22 +55,30 @@
   
   <section class="about">
     <div class="about-container">
-      <div class="cake-blurb">
+      <div class="left-container">
         <h3>Art of cakes</h3>
-        <h5 class="is-caps">We create delicious memories</h5>
+        <h5 class="is-caps">we create delicious memories</h5>
         <p>
           Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui.
           Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum.
         </p>
         <h4>Chef Cook</h4>
-        <div class="chef-img"><h4>Benito <img src="" alt=""> Gaspare</h4></div>
+        <div class="chef-img"><h4>Benito</h4> <img src="assets/images/chef-picture.png" alt=""> <h4>Gaspare</h4></div>
         <div class="quote">
-          &ldquo;<br>
-          Unique creations for unique occasions.
-          <br>&rdquo;
+          <div class="left-quote">&ldquo;</div>
+          <div class="quote-text">Unique creations for unique occasions.</div>
+          <div class="right-quote">&rdquo;</div>
         </div>
       </div>
-      <div class="cake-grid"></div>
+      <div class="right-container">
+        <figure class="cake-grid">
+          <img src="assets/images/art-grid1.png" alt="">
+          <img src="assets/images/art-grid2.png" alt="">
+          <img src="assets/images/art-grid3.png" alt="">
+          <img src="assets/images/art-grid4.png" alt="">
+          <div class="is-caps"><h3>tastes so<br>good!</h3></div>
+        </figure>
+      </div>
     </div>
   </section>
 </body>
