Some reorganization, started on third section

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   
   <section class="about">
     <div class="about-container">
-      <div class="left-container">
+      <div class="left-about-container">
         <h3>Art of cakes</h3>
         <h5 class="is-caps">we create delicious memories</h5>
         <p>
@@ -70,7 +70,7 @@
           <div class="right-quote">&rdquo;</div>
         </div>
       </div>
-      <div class="right-container">
+      <div class="right-about-container">
         <figure class="cake-grid">
           <img src="assets/images/art-grid1.png" alt="">
           <img src="assets/images/art-grid2.png" alt="">
@@ -78,6 +78,17 @@
           <img src="assets/images/art-grid4.png" alt="">
           <div class="is-caps"><h3>tastes so<br>good!</h3></div>
         </figure>
+      </div>
+    </div>
+  </section>
+
+  <section class="recipes">
+    <div class="recipes-container">
+      <div class="left-recipes-container"><img src="assets/images/pancake-pic.png" alt=""></div>
+      <div class="right-recipes-container">
+        <h3>Tasty pancakes</h3>
+        <h5 class="is-caps">season favourite</h5>
+        <p>Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus.</p>
       </div>
     </div>
   </section>
