--- a/index.html
+++ b/index.html
@@ -84,11 +84,23 @@
 
   <section class="recipes">
     <div class="recipes-container">
-      <div class="left-recipes-container"><img src="assets/images/pancake-pic.png" alt=""></div>
+      <img src="assets/images/pancake-pic.png" alt="">
       <div class="right-recipes-container">
         <h3>Tasty pancakes</h3>
         <h5 class="is-caps">season favourite</h5>
         <p>Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus.</p>
+        <div class="carousel">
+          <span class="carousel-arrow">&lt;</span>
+          <img src="assets/images/recipes-thumb-1.png" alt="">
+          <img src="assets/images/recipes-thumb-2.png" alt="">
+          <img src="assets/images/recipes-thumb-3.png" alt="">
+          <span class="carousel-arrow">&gt;</span>
+        </div>
+      </div>
+      <div class="time-box">
+        <h5 class="is-caps">ready in</h5>
+        <h3>40</h3>
+        <p>mins</p>
       </div>
     </div>
   </section>
