Finished text portions of recipe box

--- a/index.html
+++ b/index.html
@@ -88,7 +88,10 @@
       <div class="right-recipes-container">
         <h3>Tasty pancakes</h3>
         <h5 class="is-caps">season favourite</h5>
-        <p>Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus.</p>
+        <p>
+          Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus.
+          Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt.
+        </p>
         <div class="carousel">
           <span class="carousel-arrow">&lt;</span>
           <img src="assets/images/recipes-thumb-1.png" alt="">
