Finished recipe carousel

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" type="text/css" media="screen" href="assets/styles/normalize.css" />
   <link rel="stylesheet" type="text/css" media="screen" href="assets/styles/main.css" />
   <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/brands.js" integrity="sha384-sCI3dTBIJuqT6AwL++zH7qL8ZdKaHpxU43dDt9SyOzimtQ9eyRhkG3B7KMl6AO19" crossorigin="anonymous"></script>
+  <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/solid.js" integrity="sha384-P4tSluxIpPk9wNy8WSD8wJDvA8YZIkC6AQ+BfAFLXcUZIPQGu4Ifv4Kqq+i2XzrM" crossorigin="anonymous"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/fontawesome.js" integrity="sha384-7ox8Q2yzO/uWircfojVuCQOZl+ZZBg2D2J5nkpLqzH1HY0C1dHlTKIbpRz/LG23c" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -93,11 +94,11 @@
           Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt.
         </p>
         <div class="carousel">
-          <span class="carousel-arrow">&lt;</span>
+          <div class="carousel-arrow"><div><i class="fas fa-angle-left"></i></div></div>
           <img src="assets/images/recipes-thumb-1.png" alt="">
           <img src="assets/images/recipes-thumb-2.png" alt="">
           <img src="assets/images/recipes-thumb-3.png" alt="">
-          <span class="carousel-arrow">&gt;</span>
+          <div class="carousel-arrow"><div><i class="fas fa-angle-right"></i></div></div>
         </div>
       </div>
       <div class="time-box">
